[gd_scene load_steps=5 format=3 uid="uid://citd878oskpbh"]

[ext_resource type="Script" path="res://Enemies/gremlin_three.gd" id="1_endf1"]
[ext_resource type="Texture2D" uid="uid://ds4q4motskynt" path="res://Art/RandomArt/Gremlon.svg" id="1_v6wca"]
[ext_resource type="Script" path="res://Components/enemy_move_component.gd" id="2_hdwe4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lmlrk"]
size = Vector2(30, 30)

[node name="GremlinThree" type="CharacterBody2D"]
script = ExtResource("1_endf1")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.132231, 0.133264)
texture = ExtResource("1_v6wca")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -15.0
offset_top = -15.0
offset_right = 15.0
offset_bottom = 15.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_lmlrk")

[node name="CompEnemyMove" type="Node" parent="." node_paths=PackedStringArray("body")]
script = ExtResource("2_hdwe4")
body = NodePath("..")

[node name="RightRaycast" type="RayCast2D" parent="."]
target_position = Vector2(45, 0)

[node name="LeftRaycast" type="RayCast2D" parent="."]
target_position = Vector2(-45, 0)

[node name="UpRaycast" type="RayCast2D" parent="."]
target_position = Vector2(0, -31)

[node name="DownRaycast" type="RayCast2D" parent="."]
target_position = Vector2(0, 36)
